new file:   .gitignore 	modified:   README.md 	new file:   app/__pycache__/__init__.cpython-313.pyc 	new file:   app/__pycache__/admin.cpython-313.pyc 	new file:   app/__pycache__/apps.cpython-313.pyc 	new file:   app/__pycache__/initial_data.cpython-313.pyc 	new file:   app/__pycache__/models.cpython-313.pyc 	new file:   app/__pycache__/urls.cpython-313.pyc 	new file:   app/__pycache__/views.cpython-313.pyc 	new file:   app/migrations/__pycache__/0001_initial.cpython-313.pyc 	new file:   app/migrations/__pycache__/0002_alter_platform_dmca_user.cpython-313.pyc 	new file:   app/migrations/__pycache__/0003_comment_visit_like.cpython-313.pyc 	new file:   app/migrations/__pycache__/0004_visit_platform.cpython-313.pyc 	new file:   app/migrations/__pycache__/0005_user_payment_user_paypal_email.cpython-313.pyc 	new file:   app/migrations/__pycache__/0006_request.cpython-313.pyc 	new file:   app/migrations/__pycache__/0007_request_tmdb_id_alter_request_id.cpython-313.pyc 	new file:   app/migrations/__pycache__/0008_user_host.cpython-313.pyc 	new file:   app/migrations/__pycache__/0009_transaction_notification.cpython-313.pyc 	new file:   app/migrations/__pycache__/0010_alter_platform_description.cpython-313.pyc 	new file:   app/migrations/__pycache__/0011_alter_user_host.cpython-313.pyc 	new file:   app/migrations/__pycache__/0012_alter_user_host.cpython-313.pyc 	new file:   app/migrations/__pycache__/__init__.cpython-313.pyc 	modified:   app/models.py 	new file:   app/sites/__pycache__/french_stream_bio.cpython-313.pyc 	new file:   app/sites/__pycache__/scrapper.cpython-313.pyc 	new file:   app/sites/__pycache__/tools.cpython-313.pyc 	new file:   app/sites/__pycache__/wiflix_surf.cpython-313.pyc 	modified:   app/sites/french_stream_bio.py 	modified:   app/sites/scrapper.py 	new file:   app/templatetags/__pycache__/__init__.cpython-313.pyc 	new file:   app/templatetags/__pycache__/functions.cpython-313.pyc 	modified:   app/views.py 	deleted:    chromedriver 	deleted:    chr

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-django
-tmdbv3api
-undetected_chromedriver
-beautifulsoup4
-selenium
-mysql-connector-python==8.0.29
+beautifulsoup4==4.13.3
+Django==5.1.7
+mysql-connector-python==9.2.0
+selenium==4.29.0
+tmdbv3api==1.9.0
+undetected-chromedriver==3.5.5
