--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ mysql-connector-python==9.2.0
 selenium==4.29.0
 tmdbv3api==1.9.0
 undetected-chromedriver==3.5.5
+setuptools==76.0.0
+selenium_stealth
